Add logging services and enhance app component with locale display

--- a/ponyracer/src/app/app.component.html
+++ b/ponyracer/src/app/app.component.html
@@ -4,6 +4,8 @@
 <ns-races [counter2]="counter" (newRaceAvailable)="onNewRace($event)" #custom/>
 <p>new race: {{newRaceString}}</p>
 
+<p>Locale id: {{locale}}</p>
+
 <hr>
 
 <input type="checkbox" #checkboxer>
