--- a/form20/src/app/components/register/register.component.html
+++ b/form20/src/app/components/register/register.component.html
@@ -1,15 +1,22 @@
 <h2>Sign up</h2>
-<form (ngSubmit)="register()">
+<form (ngSubmit)="register()" #userForm="ngForm">
     <div>
         <label for="username">Username</label>
-        <input type="text" name="username" id="username" [(ngModel)]="user.username" required minlength="3">
+        <input type="text" name="username" id="username" [(ngModel)]="user.username" required minlength="3" #username="ngModel">
         <small>{{user.username}} is an awesome username</small>
+        @if(username.dirty && username.hasError('required')) {
+            <div>username is required</div>
+        }
+        @if(username.dirty && username.hasError('minlength')) {
+            <div>username must be at least 3 characters long</div>
+        }
     </div>
     <div>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" [(ngModel)]="user.password" required>
+        <input type="password" name="password" id="password" [(ngModel)]="user.password" required #password="ngModel">
+        @if(password.dirty && password.hasError('required')) {
+            <div>password is required</div>
+        }
     </div>
-    <button type="submit">Register</button>
+    <button type="submit" [disabled]="userForm.invalid">Register</button>
 </form>
-
-<input name="username" [ngModel]="user.username" (ngModelChange)="user.username = $event">
