--- a/form20/src/app/components/register/register.component.html
+++ b/form20/src/app/components/register/register.component.html
@@ -18,5 +18,15 @@
             <div>password is required</div>
         }
     </div>
+    <div>
+        <label for="birthdate">BirthDate</label>
+        <input type="date" id="birthDate" name="birthdate" ngModel #birthdate="ngModel" required appOldEnough>
+        @if(birthdate.dirty && birthdate.hasError('required')) {
+            <div>Birth date is required</div>
+        }
+        @if(birthdate.dirty && birthdate.hasError('tooYoung')) {
+            <div>You're way too young to be betting on pony racer</div>
+        }
+    </div>
     <button type="submit" [disabled]="userForm.invalid">Register</button>
 </form>
