feat: add .nice class with red color to multiple components and update variable declarations to readonly

--- a/transloco26/src/app/components/form1/form1.html
+++ b/transloco26/src/app/components/form1/form1.html
@@ -8,6 +8,6 @@
         <app-error-component [formCtrl]="ageCtrl"></app-error-component>
     </form>
     <div>
-        <button (click)="submit()">Submit</button>
+        <button (click)="null">Submit</button>
     </div>
 </div>
