feat: add test component, pony color component, and directives demonstrating lifecycle hooks and input changes.

--- a/ponyracer/src/components/test/test.component.html
+++ b/ponyracer/src/components/test/test.component.html
@@ -2,3 +2,6 @@
 <div doNothing>Click me</div>
 <div loggable [logText]="simpleText">Hello logs</div>
 <div loggable2 [logText2]="simpleText2">Hello log2</div>
+<hr>
+<ns-pony-color-component [color]="color()" onChangeDirective21></ns-pony-color-component>
+<button (click)="changeColor()">Change pony color now!</button>
