feat: Add new registration component with signal-based form validation for email and password.

--- a/signal-forms-29/src/app/components/register-component/register-component.html
+++ b/signal-forms-29/src/app/components/register-component/register-component.html
@@ -27,11 +27,27 @@
             @let passwordField = accountForm.password();
             @if(passwordField.touched() && !passwordField.valid()){
                 <div class="error">
-                    @for(error of passwordField.errors() ; track error.kind){
-                        <small>{{ error.message }}</small>
-                    }
+                    <ul>
+                        @for(error of passwordField.errors() ; track error.kind){
+                            <li>{{ error.message }}</li>
+                        }
+                    </ul>
                 </div>
             }
+        </div>
+
+        <hr>
+        <div>
+            <p>Parent form errors</p>
+            <div class="error">
+                @if(accountForm().touched() && !accountForm().valid()){
+                    <ul>
+                        @for(error of accountForm().errors(); track error.kind){
+                            <li>{{ error.message }}</li>
+                        }
+                    </ul>
+                }
+            </div>
         </div>
         <button type="submit">Submit</button>
     </form>
